MR2-1820 Fix visible border in full-screen videos r=mr2-core-ui-reviewers,jhirsch
Differential Revision: https://phabricator.services.mozilla.com/D138857

--- a/browser/components/companion/content/browser.css
+++ b/browser/components/companion/content/browser.css
@@ -164,6 +164,11 @@ body:not([browser-ready]) .browserStack > browser {
   border-top: 1px solid var(--colors-cafe-04);
 }
 
+:root[inDOMFullscreen] body:not([flow-reset]) .browserStack > browser {
+  border: none;
+  border-radius: 0;
+}
+
 #navigator-toolbox,
 #navigator-toolbox:not(:-moz-lwtheme),
 #tabbrowser-tabpanels,
